--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,34 @@ main {
     border-radius: 4px;
     cursor: pointer;
 }
+section{
+    width: 450px;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    align-items: center;
+    align-content: center;
+}
+
+
+#rating {
+    width: 150px;
+    display: flex;
+
+}
+
+#clock{
+    width: 100px;
+}
+#reset{
+    width: 50px;
+    cursor: pointer;
+}
+#counter{
+    width: 100px;
+}
 
 header {
     text-align: center;
@@ -39,6 +67,12 @@ header {
     box-shadow: 0px 5px 5px 0px rgba(153,153,153,0.5);
 }
 
+.ratingstars{
+    list-style: none;
+    padding-left: 0px;
+    color: gold;
+}
+
 .hide {
     color: slategray;
     height: 100px;
@@ -62,6 +96,10 @@ header {
     border-radius: 4px;
     cursor: pointer;
     box-shadow: 0px 5px 5px 0px rgba(153,153,153,0.5);
+}
+
+.stars{
+
 }
 
 p{
